# garden-photos

./: CMakeLists.txt  README.md  toolbar_view.cpp  toolbar_view.h
icons/: icon.icns
src/: CMakeLists.txt  Header.h  Makefile  canvas.cpp  config.cpp  config.h  dispatcher.hpp  events.h  garden_photos.cpp  garden_photos.h  image_panel.cpp  image_panel.h  image_panel_controller.cpp  image_panel_controller.h  init.cpp  init.h  main_frame.cpp  main_frame.h  main_window_controller.cpp  main_window_controller.h  menu.cpp  menu.h  menu.hpp  photos.cpp  photos.h  result.h  sidebar.cpp  sidebar.h  sidebar_item.cpp  sidebar_item.h  store.cpp  utils.cpp  utils.h
